--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
 
   <title>Nodds - Satisfy your cravings</title>
+
+  <meta name="description" content="">
+  <meta name="keywords" content="">
+  
 </head>
 
 <body>
