Latest update on day 2

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <title>Nodds - Satisfy your cravings</title>
 
   <meta name="description" content="">
-  <meta name="keywords" content="">
-  
+  <meta name="keywords" content="Noods, Nigerian Noodles">
+
 </head>
 
 <body>
