Corrected menu items and title

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 
-  <title>Nodds - Satisfy your cravings</title>
+  <title>Noods - Satisfy your cravings</title>
 
   <meta name="description" content="">
-  <meta name="keywords" content="Noods, Nigerian Noodles">
+  <meta name="keywords"
+    content="Noods, Nigerian Noodles, Noodles in Nigeria, Noodles, Noodles, Spicy Noodles, Pasta in Nigeria, Pasta">
 
 </head>
 
