--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <meta name="keywords"
     content="Noods, Nigerian Noodles, Noodles in Nigeria, Noodles, Noodles, Spicy Noodles, Pasta in Nigeria, Pasta">
 
+  <!-- Adsense Link -->
+  <meta name="google-adsense-account" content="ca-pub-1941155708421867">
+
 </head>
 
 <body>
