--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
   <!-- Adsense Link -->
   <meta name="google-adsense-account" content="ca-pub-1941155708421867">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1941155708421867"
+    crossorigin="anonymous"></script>
 
 </head>
 
