--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 
   <title>Noods - Satisfy your cravings</title>
+  <link rel="shortcut icon" href="/src/assets/images/logo.png" type="image/x-icon">
 
   <meta name="description"
     content="
