--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   Indulge in a culinary journey at our Noodles Restaurant, where authentic flavors and exquisite dishes await. Savor the finest selection of noodles, expertly crafted by our skilled chefs using only the freshest ingredients. From traditional favorites to innovative creations, our menu offers a delightful variety to satisfy every palate. Experience the perfect blend of taste, ambiance, and exceptional service at our Noodles Restaurant today.">
 
   <meta name="keywords" content="Noods, Nigerian Noodles, Noodles in Nigeria, Noodles, Noodles, Spicy Noodles, Pasta in Nigeria, Pasta, Noodles restaurant, Authentic noodles, Noodle dishes, Asian cuisine, Noodle bar, Noodle soup, Stir-fried noodles, Noodle specialties, Noodle house
-, Noodle recipes">
+, Noodle recipes,google top ranking noodle websites">
 
   <!-- Adsense Link -->
   <meta name="google-adsense-account" content="ca-pub-1941155708421867">
